# consort-session

./: README.md  consort-session  consort.desktop  consort.session  org.consort.desktop.gschema.xml
consort-session-1.0/: AUTHORS  ChangeLog  HACKING  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac
consort-session-1.0/capplet/: Makefile.am  Makefile.in  gsm-properties-dialog.c  main.c
consort-session-1.0/consort-session/: Makefile.am  Makefile.in  README  gsm-app.c  gsm-autostart-app.c  gsm-client.c  gsm-dbus-client.c  gsm-inhibitor.c  gsm-manager.c  gsm-presence.c  gsm-session-fill.c  gsm-shell.c  gsm-util.c  gsm-xsmp-client.c  main.c  org.consort.SessionManager.App.xml  org.consort.SessionManager.Client.xml  org.consort.SessionManager.ClientPrivate.xml  org.consort.SessionManager.Inhibitor.xml  org.consort.SessionManager.Presence.xml  org.consort.SessionManager.xml  test-client-dbus.c  test-inhibit.c
consort-session-1.0/data/: Makefile.am  Makefile.in  consort-session-properties.desktop.in.in  consort-session.convert  gnome-fallback.desktop.in  gnome-fallback.session.desktop.in.in  gnome.desktop.in  gnome.session.desktop.in.in  org.consort.SessionManager.gschema.xml.in
consort-session-1.0/data/icons/: Makefile.in
consort-session-1.0/data/icons/16x16/: Makefile.am  Makefile.in
consort-session-1.0/data/icons/22x22/: Makefile.am  Makefile.in
consort-session-1.0/data/icons/24x24/: Makefile.am  Makefile.in
consort-session-1.0/data/icons/32x32/: Makefile.am  Makefile.in
consort-session-1.0/data/icons/48x48/: Makefile.am  Makefile.in
consort-session-1.0/data/icons/scalable/: Makefile.am  Makefile.in
consort-session-1.0/debian/: 55consort-session_gnomerc  README.Debian  changelog  consort-session-bin.install  consort-session-common.install  consort-session-fallback.install  consort-session-fallback.postinst  consort-session-fallback.prerm  consort-session.install  consort-session.postinst  consort-session.prerm  consort-wm.desktop  control  control.in  copyright  watch
consort-session-1.0/debian/po-up/: af.po  am.po  ar.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_CA.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it.po  ja.po  ka.po  ko.po  (+37 more)
consort-session-1.0/debian/scripts/: consort-session-fallback  consort-wm
consort-session-1.0/doc/: Makefile.in
consort-session-1.0/doc/dbus/: Makefile.am  Makefile.in  consort-session.xml.in
consort-session-1.0/doc/man/: Makefile.am  Makefile.in  consort-session-properties.1  consort-session-quit.1  consort-session.1
consort-session-1.0/egg/: Makefile.in  eggsmclient-xsmp.c
consort-session-1.0/po/: POTFILES.in  POTFILES.skip  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  csb.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  fy.po  ga.po  gl.po  gu.po  (+65 more)
consort-session-1.0/tools/: Makefile.am  Makefile.in  consort-session-check-accelerated-helper.c  consort-session-check-accelerated.c  consort-session-quit.c
debian/: changelog  consort-session.install  control  copyright  postinst  prerm
